<resources>
    <string name="app_name">Employed</string>
    <string name="start_here">Start here</string>
    <string name="tag_employee_book">Employee Book</string>
    <string name="tag_employee_details">EMPLOYEE DETAILS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="search_employee">Search employee...</string>
    <string name="tag_proceed">Proceed</string>
    <string name="no_of_hours_logged">No. of hours Logged</string>
    <string name="date_of_month">Date of Month</string>
    <string name="total_hours_logged">Total hours logged</string>
    <string name="days_present">Days Present</string>
    <string name="days_absent">Days Absent</string>
    <string name="tag_month">Month</string>
    <string name="tag_year">Year</string>
    <string name="no_records_found">No records found...</string>
    <string name="view_attendance_report">View Attendance Report</string>
    <string name="search_employee_here">Search Employee Here</string>
    <string name="no_internet_conn">"Oops no internet connection, Please connect to the internet and try again"</string>
</resources>