<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_8ssp"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_52ssp"
        android:layout_marginEnd="@dimen/_10ssp"
        android:text="@string/search_employee_here"
        android:gravity="center"
        android:padding="@dimen/_8ssp"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8ssp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_8ssp"
        android:padding="@dimen/_8ssp"
        app:cardCornerRadius="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8ssp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_person_search"
                android:drawablePadding="@dimen/_4ssp"
                android:hint="@string/search_employee"
                android:padding="@dimen/_5ssp"
                android:textSize="@dimen/_14ssp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tview_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8ssp"
                android:drawableStart="@drawable/ic_person_search"
                android:drawablePadding="@dimen/_4ssp"
                android:gravity="center_vertical"
                android:hint="@string/search_employee"
                android:padding="@dimen/_5ssp"
                android:textSize="@dimen/_14ssp"
                android:visibility="visible" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_30ssp"
        android:layout_marginEnd="@dimen/_14ssp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tag_month" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tag_year"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10ssp"
        android:layout_marginEnd="@dimen/_10ssp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:visibility="gone">

        <Spinner
            android:id="@+id/spinner_month"
            style="@style/SpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:padding="@dimen/_6ssp" />

        <Spinner
            android:id="@+id/spinner_year"
            style="@style/SpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_6ssp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/view_attendance_report"
        android:layout_marginStart="@dimen/_8ssp"
        android:layout_marginTop="@dimen/_50ssp"
        android:layout_marginEnd="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>
